Segment Bleed-over Fixed

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ color: #B7A1DA
   padding: 1rem 1.5rem;
   border: 0;
   background:white;
-  border-radius: 25px;
+  border-radius: 1rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
   
@@ -443,6 +443,13 @@ fieldset label {
 @media only screen and (max-width: 750px) {
   .wrapper{ /*Wrapper to add margins to the website, Base loosely on: https://css-tricks.com/best-way-implement-wrapper-css*/
     margin: 0% 5% 0;
+  }
+  .segment{ /*Segments sort each section into white boxes*/
+    padding: 1rem 0.5rem;
+    background:white;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
   .persona-info{
     flex-direction: column;
